--- a/doors/3.html
+++ b/doors/3.html
@@ -30,7 +30,9 @@
                     
                     <br><br>
                        
-                    an important aspect of magick is sustaining a state of bliss where no one can affect you<br>
+                    an important aspect of magick is <a href="https://choices.vonsteinkirch.com/choices/choose-your-adventure/alchemy/the-usdchoice-of-alchemy/undefined-2" target="_blank">
+                        sustaining a state of bliss where no one can affect you</a>
+                        <br>
                     (i believe this is the only way true free will can be realized)
 
                     <br>
