--- a/doors/9.html
+++ b/doors/9.html
@@ -35,7 +35,16 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                     allowfullscreen
                     style="max-width: 100%; border-radius: 15px; border: 3px solid #ff8c00; box-shadow: 0 0 20px rgba(255, 140, 0, 0.4);">
-                </iframe>
+                 </iframe>
+                 </div>
+
+                <br>
+
+                <div style="text-align: center; margin: 20px 0; padding: 15px; background: rgba(255, 140, 0, 0.1); border-radius: 15px; border: 2px solid #ff8c00;">
+                    <span style="font-style: italic; font-size: 1.3rem; color: #ff8c00; line-height: 1.6;">
+                        "Jazz stands for freedom. It's supposed to be the voice of freedom."<br>
+                        – Max Roach
+                    </span>
                 </div>
 
             <div class="door-text">
