--- a/doors/9.html
+++ b/doors/9.html
@@ -336,7 +336,7 @@
             <span style="font-weight: bold; font-size: 1.2rem; color: #f6ce06;">
                 enjoy being jazzy today, my dear friend<br>
                 tomorrow we'll work on the<br>
-                second part of our spell for a better world
+                part II of our spell for a better world
             </span>
 
             <br><br><br>
