--- a/doors/9.html
+++ b/doors/9.html
@@ -55,7 +55,7 @@
 
                 <span style="font-weight: bold; font-size: 1.2rem; color: #f6ce06;">
                     today, as we set the tone of the rest of our spell in the following final days,<br>
-                    (as we're pushing our minds to be in a blissful that cannot be disturbed by lower vibrations)<br>
+                    (as we push our minds toward a blissful state that cannot be disturbed by lower vibration)<br>
                     we will dive into one of the most beautiful types of art ever invented: JAZZ<br
                     (whose very origin is a story of freedom && liberation from chains && oppression)
                 </span>
