clean up door 7

--- a/doors/9.html
+++ b/doors/9.html
@@ -234,7 +234,7 @@
                     <br><br>
 
                     throughout the 20th century, despite segregation and struggle,<br>
-                    new orleans jazz remained a force of liberation and expression<br>
+                    new orleans jazz remained a force of liberation && expression<br>
                     it was protest music, celebration music, funeral music, love music<br>
                     it spoke when words failed, it healed when medicine couldn't reach
 
@@ -334,7 +334,7 @@
             <br><br>
 
             <span style="font-weight: bold; font-size: 1.2rem; color: #f6ce06;">
-                enjoy being jazzy today, my dear friend<br>
+                enjoy being <i>jazzy</i> today, my dear friend<br>
                 tomorrow we'll work on the<br>
                 part II of our spell for a better world
             </span>
