--- a/doors/9.html
+++ b/doors/9.html
@@ -151,7 +151,7 @@
                 <div style="text-align: center; margin: 20px 0; padding: 15px; background: rgba(255, 140, 0, 0.1); border-radius: 15px; border: 2px solid #ff8c00;">
                     <span style="font-style: italic; font-size: 1.3rem; color: #ff8c00; line-height: 1.6;">
                         "if you have to ask what jazz is, you'll never know."<br>
-                        — louis armstrong (new orleans-born jazz musician and one of the most influential figures in the history of jazz)
+                        — louis armstrong (new-orleans-born jazz musician and one of the most influential figures in the history of jazz)
                     </span>
                 </div>
 
