--- a/doors/9.html
+++ b/doors/9.html
@@ -94,7 +94,10 @@
 
                 <span style="font-weight: bold; font-size: 1.2rem; color: #f6ce06;">
                     there is something about jazz that transcends the physical realm; i feel it with every atom of my body<br>
-                    i feel its rhythm like a fire inside my veins; i feel its energy like a river in my brain<br>
+                    i feel its rhythm like a fire inside my veins; i feel its energy like a river in my brain
+                    
+                    <br><br>
+                    
                     i must confess that, even though i've always been a music geek, i didn't really appreciate jazz until i was a little older<br>
                     (back in my 20s, i thought jazz as something i'd get really into when in my mid-age — as it turned out, this was true)<br>
                     (fun fact, i had a similar shift with olives: i used to think their taste was deplorable, and now they are my go-to snack)<br>
