--- a/doors/9.html
+++ b/doors/9.html
@@ -239,7 +239,7 @@
                     throughout the 20th century, despite segregation and struggle,<br>
                     new orleans jazz remained a force of liberation && expression<br>
                     it was protest music, celebration music, funeral music, love music<br>
-                    it spoke when words failed, it healed when medicine couldn't reach
+                    it spoke when words failed; it healed when medicine couldn't reach
 
                     <br><br>
 
