--- a/doors/9.html
+++ b/doors/9.html
@@ -336,7 +336,7 @@
             
             <br><br>
 
-            <span style="font-weight: bold; font-size: 1.2rem; color: #f6ce06;">
+            <span style="font-weight: bold; font-size: 1.2rem; color: #ee6b54;">
                 enjoy being <i>jazzy</i> today, my dear friend<br>
                 tomorrow we'll work on the<br>
                 part II of our spell for a better world
