--- a/doors/9.html
+++ b/doors/9.html
@@ -337,9 +337,9 @@
             <br><br>
 
             <span style="font-weight: bold; font-size: 1.2rem; color: #ee6b54;">
-                enjoy being <i>jazzy</i> today, my dear friend<br>
-                tomorrow we'll work on the<br>
-                part II of our spell for a better world
+                enjoy being <i>jazzy</i> today, my friend<br>
+                tomorrow we'll work on the part II<br> 
+                of our spell for a better world
             </span>
 
             <br><br><br>
