--- a/doors/9.html
+++ b/doors/9.html
@@ -41,7 +41,7 @@
                     
                 <span style="font-weight: bold; font-size: 1.2rem; color: #f6ce06;">
                     (independently of whether G'd is listening or not, this sets the tone for the day)<br>
-                    (reminding the stoic principle that you control your actions, but you're not responsible for outcomes)
+                    (reminding us of the stoic principle that you can control your actions, but not the outcomes)
                 </span>
                 
                 <br>
