--- a/doors/5.html
+++ b/doors/5.html
@@ -61,7 +61,7 @@
                     <div class="placeholder-text full-width-margin">
 
                         meanwhile... indulge yourself with our 2025 edition of<br>
-                        the top 19 most delightful vampire flicks of all time:
+                        the 19 most delightful vampire flicks of all time:
 
                         <br><br>
 
