--- a/doors/11.html
+++ b/doors/11.html
@@ -43,8 +43,8 @@
 
                          <br><br> <!-- my dirty secret: br tags are my signature, can't stop won't stop -->
 
-                         so today, we enjoy the midweek and organize our prepper plans —<br>
-                         in case of the long-awaited (and millennial dream-come-true) zombie apocalypse
+                         so today, we enjoy the midweek and organize our prepper plans<br>
+                         (in case of the long-awaited (and millennial dream-come-true) zombie apocalypse)
 
                           <br><br> <!-- my dirty secret: br tags are my signature, can't stop won't stop -->
 
