--- a/doors/11.html
+++ b/doors/11.html
@@ -32,7 +32,7 @@
                         
                          i cannot decide which ones are more fun: zombies || vampires<br>
                          and the cool think about new orleans is that i don't have to choose<br>
-                         the menu has both — plus <a href="https://www.youtube.com/watch?v=DhggumD8yKY" target="_blank" class="blue-link">this is the city of legendary cemeteries</a>
+                         (the menu has both — plus <a href="https://www.youtube.com/watch?v=DhggumD8yKY" target="_blank" class="blue-link">this is the city of legendary cemeteries</a>)
                          
                          <br><br> <!-- my dirty secret: br tags are my signature, can't stop won't stop -->
 
