--- a/doors/11.html
+++ b/doors/11.html
@@ -41,7 +41,7 @@
                          <br><br> <!-- my dirty secret: br tags are my signature, can't stop won't stop -->
 
                          so today, we enjoy the midweek and organize our prepper plans<br>
-                         (in case of the long-awaited — and millennial dream-come-true — <a href="https://www.youtube.com/watch?v=HIhgZJQeWyo" target="_blank" class="blue-link">zombie apocalypse</a>)
+                         (in case of the long-awaited — and millennial dream-come-true — <a href="https://www.youtube.com/watch?v=PuKpoadyKwo" target="_blank" class="blue-link">zombie apocalypse</a>)
 
                           <br><br> <!-- my dirty secret: br tags are my signature, can't stop won't stop -->
 
