--- a/doors/2.html
+++ b/doors/2.html
@@ -113,7 +113,7 @@
                     <br>
 
                     burn the list<br>
-                    let it go
+                    <a href="https://www.youtube.com/watch?v=BmLFjFsyw9o" target="_blank">let it go</a>
 
                     <br><br>
 
