--- a/doors/11.html
+++ b/doors/11.html
@@ -50,7 +50,7 @@
                           <br><br> <!-- my dirty secret: br tags are my signature, can't stop won't stop -->
 
                         see you tomorrow evening<br>
-                        for the last door before friday the 13th
+                        for the last door before <i>friday the 13th</i>
 
                         <br><br> <!-- my dirty secret: br tags are my signature, can't stop won't stop -->
 
