--- a/doors/3.html
+++ b/doors/3.html
@@ -101,7 +101,7 @@
                         <br><br>
 
                         but for today, i want to introduce another special trick of magick:<br>
-                        <i>harvesting energy from the place you are in</i><br>
+                        <i>harnessing energy from the place you are in</i><br>
                         (that's one of the reasons i've lived a nomadic life for many years now)<br>
                         every place has a unique feeling that transports you to a certain state of mind<br>
                         every time you arrive in a new place, it's like a fresh start, a blank canvas<br>
